Add machine learning model development, portfolio construction, and performance analysis notebooks
- Created 03_ML_Model_Development_and_Training.ipynb for training and fine-tuning ML models (LightGBM, TensorFlow, PyTorch).
- Developed 04_Portfolio_Construction_and_Backtesting.ipynb to translate ML predictions into trading signals and perform backtesting.
- Implemented 05_Performance_Analysis_and_Robustness_Testing.ipynb for evaluating trading strategy performance and robustness.
- Updated requirements.txt to ensure compatibility with tf-quant-finance.
- Enhanced data_loader.py with improved CSV loading function and refactored data loading methods for better readability and efficiency.
- Refactored feature_engineering.py to support multiple lookback periods for momentum and volatility calculations, and added new features like On-Balance Volume and Average Daily Volume.

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ xgboost>=1.7.0
 # Deep Learning Frameworks
 # TensorFlow and tf-quant-finance
 tensorflow>=2.10.0
-tf-quant-finance>=0.7.0
+tf-quant-finance
 
 # PyTorch
 torch>=1.13.0
